Fixed issue (Grid columns causing horizontal scrolling) as mentioned here: https://github.com/jgthms/bulma/issues/2242

--- a/src/styles/_effectFlipCard.scss
+++ b/src/styles/_effectFlipCard.scss
@@ -1,6 +1,8 @@
 @use "./src/styles/global-vars" as var;
 
 .effect-flip-card {
+  margin-bottom: 30px;
+
   .swiper {
     width: 300px;
     @include mobile {
